--- a/.gitignore
+++ b/.gitignore
@@ -55,17 +55,17 @@ public/scripts/*
 !public/scripts/.gitkeep
 
 # VRM files
-/public/vrm/*
-!/public/vrm/AvatarSample_A.vrm
-!/public/vrm/AvatarSample_B.vrm
-!/public/vrm/AvatarSample_C.vrm
-!/public/vrm/nikechan_v1.vrm
-!/public/vrm/nikechan_v2.vrm
-!/public/vrm/nikechan_v2_outerwear.vrm
+# /public/vrm/*
+# !/public/vrm/AvatarSample_A.vrm
+# !/public/vrm/AvatarSample_B.vrm
+# !/public/vrm/AvatarSample_C.vrm
+# !/public/vrm/nikechan_v1.vrm
+# !/public/vrm/nikechan_v2.vrm
+# !/public/vrm/nikechan_v2_outerwear.vrm
 
 # Background files
-/public/backgrounds/*
-!/public/backgrounds/bg-c.png
+# /public/backgrounds/*
+# !/public/backgrounds/bg-c.png
 
 /public/images/uploaded/*
 !/public/images/placed/.keep
