--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors https://ai-tuber-jwt9hxyzj-ohishitas-projects.vercel.app/;"
+          "value": "frame-ancestors http://localhost:3000/;"
         }
       ]
     }
