--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "three": "^0.167.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
